--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
