Configures dynamic database connections
Sets up dynamic database connections based on environment variables
for exporting data, allowing to connect to different databases.

This setup enables to retrieve table names from the specified export database.

Adds environment variables to .env.example file.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,21 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+
+EXPORT_DB_CONNECTION=
+EXPORT_DB_HOST=
+EXPORT_DB_PORT=
+EXPORT_DB_DATABASE=
+EXPORT_DB_USERNAME=
+EXPORT_DB_PASSWORD=
+
+IMPORT_DB_CONNECTION=
+IMPORT_DB_HOST=
+IMPORT_DB_PORT=
+IMPORT_DB_DATABASE=
+IMPORT_DB_USERNAME=
+IMPORT_DB_PASSWORD=
+
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
